#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(lyekka, 0.1, victor-lyekka@boivie.com)
AM_INIT_AUTOMAKE(lyekka, 0.1)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL

# Checks for libraries.
AC_LANG_PUSH([C++])
AC_CHECK_HEADER(boost/filesystem/operations.hpp, [], [AC_MSG_ERROR([header file <boost/filesystem/operations.hpp> is required for biist])])
LIBS="$LIBS -lboost_filesystem-mt -lboost_system-mt"

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_SIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_CHECK_FUNCS([memset])

AC_OUTPUT(Makefile src/Makefile)

