# what flags you want to pass to the C compiler & linker
AM_CFLAGS = --pedantic -Wall -O2 -std=c99
AM_LDFLAGS = 
INCLUDES = 

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
bin_PROGRAMS = lyekka
lyekka_SOURCES = \
main.cc index_cmd.cc main.h cmd_handler.h create_cmd.cc cmd_handler.cc path_cmd.cc sdsqlite/sdsqlite.cpp sdsqlite/sdsqlite.h indexer.cc indexer.h indexed_obj.h db.h db.cc chunk.h paths.h paths.cc status_cmd.cc remote_cmd.cc remotes.h remotes.cc formatter.h formatter.cc push_cmd.cc foldermap.h foldermap.cc chunkfactory.h chunkfactory.cc gc_cmd.cc purge_cmd.cc






